css and react app successfully builds

--- a/src/server/index.html
+++ b/src/server/index.html
@@ -2,10 +2,11 @@
   <head>
     <meta charset="utf-8">
     <title>React.js using npm, babel and webpack</title>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
   </head>
   <body>
     <div id="app" />
 
-    <script src="public/bundle.js" type="text/javascript"></script>
+    <script src="bundle.js" type="text/javascript"></script>
   </body>
 </html>
